# datadog-security-playground

./: .gitignore  AIGUARD.md  DEVELOPER.md  LIMA.md  Makefile  README.md  feedback.md
.github/: CODEOWNERS
.github/workflows/: app-image.yaml  regression-tests.yaml  tests.yaml
app/: Dockerfile  app.py  requirements.txt
app/assets/: playground.js
app/html/: app.py
app/templates/: index.html
appsec/: DEVELOPER.md  Dockerfile  README.md  docker-compose.yml  openapi-client-config.yaml  pyproject.toml
appsec/onboarding/: README.md
appsec/onboarding/apps/: API.md
appsec/onboarding/apps/go/gin/: Dockerfile  go.mod  go.sum
appsec/onboarding/apps/go/gin/cmd/server/: main.go
appsec/onboarding/apps/python/fastapi/: pyproject.toml
appsec/onboarding/apps/python/fastapi/src/appsec_test_api/: main.py
appsec/onboarding/setups/: docker-compose.apm-only.envoy-go-gin.yml  docker-compose.apm-only.go-gin.yml  docker-compose.apm-only.haproxy-go-gin.yml  docker-compose.apm-only.nginx-go-gin.yml  docker-compose.apm-only.python-fastapi.yml
appsec/onboarding/setups/proxies/envoy/: envoy.yaml
appsec/onboarding/setups/proxies/haproxy/: haproxy.cfg
appsec/onboarding/setups/proxies/nginx/: Dockerfile  nginx.conf
appsec/scripts/: sync-api-client.py
appsec/src/dogfooding_ui/: start.py
appsec/src/dogfooding_ui/core/: groups.py  model.py  registry.py
appsec/src/dogfooding_ui/core/scenarios/: api1_authenticated_predictable_id.py  api1_jwt_without_audience.py  seed_catalog.py
appsec/src/dogfooding_ui/web/: app.py  catalog.py
appsec/src/dogfooding_ui/web/static/: dogfooding.css  dogfooding.js
appsec/src/dogfooding_ui/web/templates/dogfooding/: index.html
appsec/src/test_api_client/: README.md  pyproject.toml
appsec/src/test_api_client/test_api_client/: __init__.py
appsec/src/test_api_client/test_api_client/api/default/: api1_sensitive_user_by_predictable_id.py  health.py  login.py  signup.py  whoami.py
appsec/src/test_api_client/test_api_client/models/: __init__.py  api_1_sensitive_by_id_response.py  api_1_sensitive_by_id_response_username.py  detail_error_response.py  error_response.py  health_response.py  login_response.py  signup_response.py  user.py  validation_error_item.py  validation_error_response.py
appsec/src/traffic_generator/: __init__.py  start.py  start_stack.py
appsec/src/traffic_generator/core/: __init__.py  groups.py  model.py  registry.py
appsec/src/traffic_generator/core/scenarios/: apm_traffic.py  rasp_detection.py  threat_detection.py
appsec/src/traffic_generator/web/: __init__.py  app.py  catalog.py
appsec/src/traffic_generator/web/static/: dogfooding.css  dogfooding.js
appsec/src/traffic_generator/web/templates/dogfooding/: index.html
appsec/test_api/: openapi.yaml
appsec/test_api/python/fastapi/src/appsec_test_api/: main.py
appsec/test_apis/: API.md
appsec/test_apis/go/gin/: Dockerfile  go.mod
appsec/test_apis/go/gin/cmd/server/: main.go
appsec/test_apis/python/fastapi/: Dockerfile  pyproject.toml
appsec/test_apis/python/fastapi/src/appsec_test_api/: main.py
assets/: Dockerfile  Makefile  README.md
assets/bpfdoor/: README.md  build.sh  fake-bpfdoor.arm64  fake-bpfdoor.x64
assets/copy-fail/: simulate-exploit.py
assets/correlation/: backend-rule.json  create-rule.sh  payload.sh
assets/malware/: Makefile  README.md  go.mod  malware.arm64  malware.x64  payload.sh
assets/rce-malware/: build.sh  go.mod  loader.go  loader.x64  main.go  malware.arm64  malware.x64  payload.sh  preload.c
deploy/: README.md  app.yaml  cronjob-rce-malware.yaml  cronjob-scenario-detonator.yaml  datadog-agent.yaml  juiceshop.yaml  php-app.yaml
deploy/juiceshop/: README.md  db-deployment.yaml  juiceshop-deployment.yaml  juiceshop-networkpolicy.yaml  juiceshop-service.yaml  kustomization.yaml
deploy/regression/: PLAN.md  create-monitors.sh  rbac.yaml  (+4 more)
php-app/: Dockerfile
scripts/: tool.sh
tests/: README.md  conftest.py  pyproject.toml  requirements.txt  test_rce_malware.py
(+27 files in other folders)
